--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,10 @@
 <
-  <!-- Default form login -->
+  <div class="parent">
+    <div class="div2" style="background-image: url(./assets/img/map.jpg);opacity: 0.8;"> 
+
+    </div>
+    <div class="div1"> 
+   
 
   <form class="text-center border border-light p-5"  [formGroup]="messageForm" (ngSubmit)="onSubmit()">
 
@@ -41,4 +46,6 @@
 
   </form>
 
-  <!-- Default form login -->
+  <!-- Default form login --> 
+</div>
+</div>
