--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,11 +1,10 @@
 <div class="logo">
-    <a href="https://www.creative-tim.com" class="simple-text">
-        <div class="logo-img">
-            <img src="/assets/img/angular2-logo-red.png"/>
+    <a href="https://www.click2ship.fr" class="simple-text">
+        <div >
+            <img src="/assets/img/logo_neoshipping (1).png"/>
         </div>
-        Creative Tim
     </a>
-</div>
+  </div>
 <div class="sidebar-wrapper">
   <div *ngIf="isMobileMenu()">
     <form class="navbar-form">
